# task_management

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  README.md  SETUP.md  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: __init__.py  auth.py
backend/models/: __init__.py  category.py  productivity_log.py  subtask.py  task.py  time_block.py
backend/routers/: __init__.py  categories.py  notifications.py  productivity.py  sync.py  tasks.py  time_blocks.py
backend/schemas/: __init__.py  category.py  productivity.py  subtask.py  task.py  time_block.py
backend/services/: __init__.py  productivity.py  recurring.py
backend/tests/: test_categories.py  test_main.py  test_productivity.py  test_recurring.py  test_tasks.py
frontend/: .design-system-summary.md  .prettierignore  DESIGN_SYSTEM.md  Dockerfile  README.md  package.json
frontend/docs/: INTEGRATION_TESTS.md  UX_BEHAVIOR.md  design-system.md
frontend/public/: sw.js
frontend/scripts/: export-tokens-android.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
mobile/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
scripts/: format.sh  lint.sh  setup.sh  test.sh
(+143 files in other folders)
